# rust-practice

./: Cargo.toml  README.MD  library.rlib
lib_slice/: Cargo.toml
lib_slice/src/: lib.rs
mononio/: Cargo.toml
p_attributes/: Cargo.toml
p_attributes/src/: lib.rs  main.rs
p_closures/: Cargo.toml
p_closures/src/: main.rs
p_conversion/: Cargo.toml
p_conversion/src/: main.rs
p_flow_of_controll/: Cargo.toml
p_flow_of_controll/src/: main.rs
p_function/: Cargo.toml
p_function/src/: main.rs
p_function_closures/: Cargo.toml
p_function_closures/src/: main.rs
p_generics/: Cargo.toml
p_generics/src/: main.rs
p_iter/: Cargo.toml
p_iter/src/: lib.rs  main  main.rs
p_iter/src/main.dSYM/Contents/Resources/DWARF/: main
p_match/: Cargo.toml
p_match/src/: main.rs
p_print/: Cargo.toml
p_print/src/: main.rs
p_scope_lifetime/: Cargo.toml
p_scope_lifetime/src/: main.rs
p_scope_rule/: Cargo.toml
p_scope_rule/src/: main.rs
p_slice/: Cargo.toml
p_slice/src/: main.rs
p_string/: Cargo.toml
p_string/src/: main.rs
p_struct/: Cargo.toml
p_struct/src/: main.rs
p_trait/: Cargo.toml
p_trait/src/: main.rs
p_vector/: Cargo.toml
src/: main.rs
