[workspace]
members = [
	"p_vector",
	"p_slice",
	"p_struct",
	"p_closures",
	"p_iter",
	"p_print",
	"p_match",
	"p_conversion",
	"p_flow_of_controll",
	"p_function",
	"p_function_closures",
]

[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
